B&L QA/objects/Consignment_Search_Data__c.object
<CustomObject>
    <description>Custom object used to hold search results from users&apos; consignment searches.  This object holds the contents of each user&apos;s most current search, and after every search, the data found from the previous search gets deleted.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_User__c</fullName>
        <formula>IF($User.Id= LEFT(User_ID__c,15),1,0)</formula>
        <label>CreatedBy$User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the consignment transaction</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_End_Date__c</fullName>
        <label>Expiration End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Start_Date__c</fullName>
        <label>Expiration Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>In PeopleSoft, this is the &quot;Transaction Group&quot;, which indicates the type of transaction.</description>
        <label>Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Date__c</fullName>
        <label>Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>This is the value of the consignment location.  In NA it is 3 characters, in EMEA up to 5. Making this 10 to be safe.</description>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_ID__c</fullName>
        <label>Physician ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>This picklist will be populated with Apex, from the &quot;Product Group&quot; query, which creates a distinct list of all Product Groups currently in the current Account&apos;s consignment.</description>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Values to be added by Apex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_ID__c</fullName>
        <description>A unique ID generated by the consignment search Apex class that is passed to the integration.  It gives each search an identifier so that the call to delete previous searches can be made.</description>
        <label>Search ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <label>To Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Contains the type of transaction, for example &quot;S&quot; for &quot;Scrap&quot;.</description>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>This is the standard SFDC ID from the User object for the user that performed the search.</description>
        <label>User ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>User name of the user that made the consignment transaction</description>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Consignment Search Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Search_Billed_Consignment_Result</fullName>
        <columns>Ship_To__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Search Billed Consignment Result</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Billed_Consignment_Results</fullName>
        <columns>Ship_To__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <label>Search Billed Consignment Results</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Consignment_Result</fullName>
        <columns>Ship_To__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Location__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Search Consignment Result</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Consignment_Results</fullName>
        <columns>Ship_To__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Location__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <label>Search Consignment Results</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Result</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Search Result</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Results</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Search_ID__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <label>Search Results</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Transaction_History_Result</fullName>
        <columns>Date__c</columns>
        <columns>Ship_To__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Location__c</columns>
        <columns>To_Location__c</columns>
        <columns>User_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Search Transaction History Result</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Transaction_History_Results</fullName>
        <columns>Date__c</columns>
        <columns>Ship_To__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Location__c</columns>
        <columns>To_Location__c</columns>
        <columns>User_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <label>Search Transaction History Results</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Unbilled_Consignment_Result</fullName>
        <columns>Ship_To__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Location__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Search Unbilled Consignment Result</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_Unbilled_Consignment_Results</fullName>
        <columns>Ship_To__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Location__c</columns>
        <columns>Product_ID__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Implant_Date__c</columns>
        <columns>Physician_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <label>Search Unbilled Consignment Results</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Search Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consignment Search Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>